<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_juego">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35sp"
                android:text="@string/app_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="56dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_juego_tv_number_players" />

            <Spinner
                android:id="@+id/mj_spn_nplayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/mj_bt_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="normal"
                android:text="@string/menu_juego_bt_normal" />

            <Button
                android:id="@+id/mj_bt_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rank"
                android:text="@string/menu_juego_bt_rank" />

            <Button
                android:id="@+id/mj_bt_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="ranking"
                android:text="@string/menu_juego_bt_ranking" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="56dp" />

            <LinearLayout
                android:id="@+id/mj_ll_ranking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_juego_tv_ranking" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>