<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creacion_cuenta">
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="56dp" />

            <TextView
                android:id="@+id/tv_cc_title"
                android:textSize="35sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleX="1"
                android:gravity="center"
                android:text="@string/creacion_cuenta_tv_titulo_text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="56dp" />

            <EditText
                android:id="@+id/cc_edt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:autofillHints="name"
                android:textColorHint="@android:color/black"
                android:hint="@string/creacion_cuenta_edt_usuario" />

            <EditText
                android:id="@+id/cc_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/creacion_cuenta_edt_password"
                android:textColorHint="@android:color/black"
                android:autofillHints="name"
                android:minWidth="48dp"
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/cc_edt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/creacion_cuenta_edt_nombre"
                android:textColorHint="@android:color/black"
                android:autofillHints="name"
                android:minWidth="48dp"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/cc_bt_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="crear_cuenta"
                android:text="@string/creacion_cuenta_bt_sign_up" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/cc_edt_host_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:autofillHints="name"
                android:textColorHint="@android:color/black"
                android:hint="@string/inicio_sesion_edt_server"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>